<resources>
    <string name="app_name">Move Files</string>
    <string name="grant_help">This app needs some privileges to work. Click the button to grant them. You will need to select the app from the list and enable access to manage all files.</string>
    <string name="grant">Grant Privileges</string>
    <string name="source_help">Select a source folder to move files from.</string>
    <string name="source">Source</string>
    <string name="dest_help">Select a destination folder to move files to.</string>
    <string name="dest">Destination</string>
    <string name="enable_help">When started, a background job will run approximately every 15 minutes that moves files from the source folder to the destination folder.</string>
    <string name="enable">Start background job</string>
    <string name="disable">Stop background job</string>
    <string name="service_help">If you need more frequent moving, a foreground service can be run. This will allow for real-time monitoring of the source folder. The background job should also be enabled in order to restore the service when rebooting.</string>
    <string name="service_enable">Start foreground service</string>
    <string name="service_disable">Stop foreground service</string>
    <string name="log_help">This shows the most recent part of the log file (scroll up for more)</string>
    <string name="logging">Logging</string>
</resources>